<resources>
    <string name="app_name">Theremin</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="sine">Sine</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="saw">Saw</string>
    <string name="wave_type">Wave Type</string>
    <string name="octaves">Octaves</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="lock">Hold To Lock</string>
    <string name="play_mode">Play Mode</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
</resources>
